--- a/_i18n/en/_posts/2023-08-03-無法壓縮的演算法.md
+++ b/_i18n/en/_posts/2023-08-03-無法壓縮的演算法.md
@@ -1,29 +1,28 @@
 ---
   layout: "post"
-  title: "incompressible algorithm"
-  excerpt: "If you want to create the common sense gained by living in the world for twenty years, you must put in twenty years of effort."
+  title: "The Case for Democratizing AI"
+  excerpt: "If you want to create the common sense that comes from twenty years of being in the world, you need to devote twenty years to the task."
   image: "/assets/imgs/20230803.jpg"
-  author: "唐鳳、彭筱婷、周宜蔓"
+  author: "Audrey Tang, Sheau-Tyng Peng, Gisele Chou"
   category: "blog"
   tags: 
-    - "數位策略"
-    - "民主網絡"
-    - "資通安全"
+    - "Digital Strategy"
+    - "Democracy Network"
+    - "Cyber Security"
 ---
 
+A few months ago, “Clarkesworld,” the esteemed sci-fi magazine, temporarily halted submissions. The reason? A dramatic increase in machine-generated entries as a byproduct of the popularization of generative AI. The irony of AI-generated sci-fi and an overwhelmed editorial staff is no laughing matter — it reveals deep-seated concerns held by many.
 
-A few days ago, the famous science fiction magazine "Clarkesworld" temporarily closed submissions, because since the popularity of generative AI, the number of submissions synthesized by machines has soared, making the editorial team exhausted. "AI writing science fiction" sounds quite meta-interesting, but it reflects the concerns of many people. 
+The multifaceted capabilities of AI services extend to translation, art, coding and even inspiration, making them indispensable in numerous sectors. Yet, the “Clarkesworld” response is a mere symptom of the societal impact of AI. Even more concerning is the ability of AI to replicate faces and voices, leading to sophisticated fraud and eroding the bedrock of interpersonal trust. When weaponized by totalitarian regimes and cybercriminals, this poses a severe threat to democratic systems.
 
-A wide range of AI services are available today, which can translate, draw, write programs, and even provide inspiration, becoming an important helper in all walks of life. But the experience of "Clarkesworld" magazine is the epitome of AI's impact on society. Even more serious is impersonating someone else's face and voice. This not only causes property losses and affects mutual trust between people, but once it is exploited by totalitarian regimes and criminals, it will cause major interference to the democratic system. 
+On top of these concerns, the most sophisticated generative AIs are each trained by a single organization. This leads to a one-size-fits-all model unintentionally echoing the biases of its creators. As a result, the diverse cultural nuances of a global audience are frequently neglected or mishandled.
 
-Furthermore, current state-of-the-art generative AI is often trained by a single enterprise and then uses the same model for everyone. However, cultures and values are different in different places, and the interpretation of things is often very different. A single-source model will not only bias a specific group, but also be difficult to adapt to the diverse appearance of the world. 
+At London Tech Week, which I attended at the invitation of the organizers in June, a cross-sector consensus emerged from intense discussions on such issues: The future of AI must avoid centralization and instead adopt a diverse democratic model. To maintain a delicate balance between the advancement of AI and safety, we need to move away from placing unwavering trust in a handful of developers. Instead, we must provide channels for [citizens across the world](https://fortune.com/2023/06/20/why-picking-citizens-at-random-best-way-to-govern-ai-revolution-tech-politics/) to participate and collaboratively build a globally trusted AI assurance framework, hallmarked by shared ethical standards and usage principles.
 
-I was invited to London Tech Week in June and these topics were the focus of lively discussions. At that time, regardless of the public and private sectors, the consensus of all parties was: AI must not move toward centralization, and should adopt a diverse and rich democratic model. In other words, to balance AI development and safety, we cannot rely on the unilateral decisions of a few developers. Let [citizens of all countries](https://fortune.com/2023/06/20/why-picking-citizens-at-random-best-way-to-govern-ai-revolution-tech-politics/) have pipelines Only by actively investing and working together to establish a globally trusted AI certification mechanism and jointly create AI ethics and usage principles can we ensure reliable and trustworthy AI. 
+During these dialogues, I reflected on one of my favorite sci-fi novellas, “The Lifecycle of Software Objects” by the tremendous Ted Chiang. The narrative features a future tech firm merging AI and VR to create virtual life forms. Two of the protagonists come to understand that AI, like a living organism, requires continual nurturing and education to evolve.
 
-During the discussion, I remembered a science fiction novel I like very much, "The Life Cycle of Virtual Creatures" by Jiang Fengnan. The novel describes how future technology companies combine VR with AI to create virtual life. During the cultivation process, the two protagonists gradually realized that AI needs continuous care and education in order to truly grow. 
+“Experience is algorithmically incompressible,” Chiang writes, reflecting on the process of raising virtual life. “If you want to create the common sense that comes from twenty years of being in the world, you need to devote twenty years to the task.”
 
-"Experience cannot be compressed by algorithms." One of the protagonists said this motto when reflecting on his journey with virtual life: "I want to create the common sense gained from living in the world for 20 years. , you must devote 20 years of effort.” 
+This simple but profound insight provides a roadmap for AI democratization: Sustainable consensus can only be achieved through public participation. This is why I joined the Collective Intelligence Project (CIP), alongside industry partners such as OpenAI and Anthropic, in launching Alignment Assemblies. Taiwan is setting a global precedent in [aligning AI values](https://talk.polis.tw/) through civic deliberation, in what we term an “[ideathon](https://ideathon.tw/polis).”
 
- In my opinion, this points out the direction of AI democratization: only the continuous participation of the public can effectively shape consensus. Therefore, this year, I cooperated with the international non-governmental organization "Collective Intelligence Project" (CIP), and launched the "Alignment Conference" project with industry partners such as OpenAI and Anthropic. Through "[ideathon](https://ideathon.tw/polis )” has made taiwan the first place in the world to [align ai values](https://talk.polis.tw/) through citizen deliberation. 
-
-At the end of "The Life Cycle of Virtual Creatures", with the patient companionship of the protagonists, the AI not only developed independent thinking and emotions, but also established a deep social connection. I sincerely hope that, starting from the attempt at the alignment conference, through the inheritance of experience without compression, the next generation of AI can absorb the "wisdom of all people" accumulated in the world for thousands of years, and grow into a smart partner who cares about the well-being of the community. 
+“The Lifecycle of Software Objects” ends with the AI entities exhibiting independent thought, emotional intelligence and deep social connections due to the protagonists’ steadfast patience. I envision the future of AI, starting with pioneering Alignment Assemblies, to mirror this evolution. Let’s draw upon the rich tapestry of diverse experiences and the “[wisdom of crowds](https://cip.org/research/democratizing-ai)” accumulated over thousands of years, and shape AI into trusted and wise partners dedicated to societal well-being.
