--- a/_i18n/en/_posts/2023-07-06-公私聯防-精準打詐.md
+++ b/_i18n/en/_posts/2023-07-06-公私聯防-精準打詐.md
@@ -1,38 +1,37 @@
 ---
   layout: "post"
-  title: "Public-private joint defense, precise fraud"
-  excerpt: "Not only catch leaks at the end, but also stop them from the source."
+  title: "Public-Private Collaboration for Precise Fraud Prevention"
+  excerpt: "Not just fixing leaks at the end but also blocking them from the source."
   image: "/assets/imgs/hands-1947915_1280.jpg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "數位產業"
-    - "數位政府"
+    - "Digital Industries"
+    - "Digital Service"
 ---
 
+Some time ago, the Executive Yuan ratified the "Fraud Action Program 1.5" and established the "Fraud Prevention Office". Concurrently, I received requests from my column readers, hoping I would share the concrete actions of the digital department in combating fraud.
 
-A while ago, the Executive Yuan approved the "Fraud Action Program 1.5" and established the "Fraud Office". At the same time, I received suggestions from readers of the column, hoping that I would share the actual actions of the digital department in preventing fraud. 
+In reality, fraud doesn't just affect governance and economy, but its more severe consequence lies in the erosion of societal trust.
 
-In fact, fraud not only affects governance and the economy, but the more serious consequence is the destruction of social trust. 
+Should government units be impersonated by wrongdoers, crucial messages would fail to reach the public effectively; if e-commerce platforms are counterfeited, consumers would find it hard to trust, thereby reducing their willingness to purchase.
 
-Once government units are impersonated by gangsters, important messages will not be effectively conveyed to the public; if e-commerce platforms are impersonated, consumers will find it difficult to trust them and reduce their willingness to consume. 
+To combat fraud, the first step is to block the source of fraud and prevent personal information from being stolen. Consequently, the digital department is fully committed to promoting "Short Code SMS" and privacy-enhancing technologies, to assist industries in enhancing information security and reducing personal data leaks.
 
-To combat fraud, the first step is to prevent the source of fraud and prevent personal information from being stolen. Therefore, the digital department is fully promoting "Short Code SMS" and "Logistic Hidden Code" to help the industry strengthen information security and reduce personal information leakage. 
+With numerous text messages received on mobile phones daily, how does one discern the genuine messages? The Ministry of Digital Affairs has designed a government-specific SMS short code for this very purpose. This set of numbers can only be used by government agencies for text messages. We anticipate its launch in the fourth quarter of this year, enabling everyone to distinguish it clearly and prevent counterfeit attempts by criminals.
 
-There are so many text messages on mobile phones that everyone receives every day, which one is the real message? The Ministry of Digital Affairs has planned a government-specific SMS short code for this purpose. This group of numbers can only be sent by government agencies. It is expected to be launched in the fourth quarter of this year, so that everyone can clearly identify it and prevent criminals from counterfeiting. 
+Just like the anti-fraud hotline "165" and other government-exclusive numbers, they are easy to remember and can't be altered. Upon determining this set of short codes, the digital department will liaise with telecom operators for preemptive technical checks.
 
-Just like the anti-fraud consultation line "165" and other government-specific numbers, they are easy to remember and will not be tampered with. After this group of short codes is determined, the digital department will coordinate with the telecom operators to conduct technical checks in advance. 
+Moreover, we are encouraging e-commerce partners to implement privacy-enhancing technologies, replacing the recipient's contact number on the order with representative numbers and codes. Logistics personnel can contact the recipient by simply dialing the code, and the public can also contact logistics using this code. It's not only convenient and memorable but can also prevent personal information leaks.
 
-In addition, we are promoting e-commerce partners to introduce "hidden code technology" to replace the consignee's contact number on the order with representative numbers and codes. Logistics personnel only need to dial the code to contact the consignee, and the public can also contact the logistics through the code. Not only is it convenient and easy to remember, but it can also prevent the leakage of personal information. 
+The second step in combating fraud is to prevent fraud at its end, even if personal information is unfortunately leaked, and to inhibit the flow of money. This is the "platform joint defense" implemented by the Digital Department.
 
-The second step in fighting fraud is to prevent the end of fraud and prevent the flow of money from being released even if personal information is unfortunately outflowed. This is the "platform joint defense" implemented by the Digital Department. 
+The e-commerce anti-fraud collaborative platform was jointly established by the Ministry of Digital Affairs, industry associations, and Taiwan Network Information Center (TWNIC). Once an e-commerce partner identifies a fraudulent website and reports it to 165, the Taiwan Network Center can quickly halt the analysis of fraudulent domain names, minimizing the risk of domestic users being deceived, using the Public Association as a liaison.
 
-The e-commerce anti-fraud joint defense platform is jointly established by the Ministry of Digital Technology and the Public Association, and Taiwan Network Center (TWNIC). After an e-commerce partner discovers a fraudulent website and reports it to 165, using the public association as a contact window, Taiwan Network Center can stop analyzing fraudulent domain names more quickly, preventing domestic users from being deceived. 
+The game point fraud collaborative platform was co-established by the Digital Department, the Procuratorate, the Executive Yuan's Money Laundering Prevention Office, and the game point industry. It offers services like "game entry delay of forty-eight hours", and "point anti-fraud lock card platform". When the public discovers they have been deceived, they can lock it on the platform and return to the original store for a refund, thereby reducing losses.
 
-The game point fraud joint defense platform is jointly established by the Digital Department, the Procuratorate, the Money Laundering Prevention Office of the Executive Yuan, and the game point industry. It provides "game entry delay forty-eight hours", "point prevention Fraud lock card platform" and other services. When the public finds that they have been scammed, they can go to the platform to lock it, and then go to the original purchase store to refund the fee, which can reduce losses. 
+From March this year until now, the card lock platform has successfully locked hundreds of transactions, and the number of reported incidents has been reduced from 1,500 per month to fewer than 100.
 
-From March this year to now, the card lock platform has successfully locked hundreds of transactions, and the number of reported transactions has also been reduced from 1,500 per month to less than 100. 
+The public-private collaboration mechanism promoted by the Digital Department is also applied to virtual accounts. Should a bank discover an illegal virtual account, it can report to the Financial Supervisory Commission through the collaborative platform, and then the digital department will perform inspections according to law. For illegal cash flows, we cooperate with the Financial Supervisory Commission to establish a third-party payment inquiry system, helping relevant units obtain the necessary account information in the shortest possible time.
 
-The public-private joint defense mechanism promoted by the Digital Department is also applied to virtual accounts. Once the bank discovers that the virtual account is illegal, it can report to the Financial Supervisory Commission through the joint defense platform, and then the digital department will conduct an inspection according to law. For illegal cash flows, we cooperate with the Financial Supervisory Commission to establish a third-party payment inquiry system to assist relevant units to obtain relevant account information in the shortest possible time. 
-
-The goal of the digital department to fight fraud is to build a resilient protective net, not only to catch leaks at the end, but also to stop them from the source. We will continue to share specific practices and implementation results, and readers are welcome to give their opinions to make the policy better. 
+The goal of the digital department in combating fraud is to build a resilient protective net, not just fixing leaks at the end but also blocking them from the source. We will continue sharing specific methods and execution results, and we welcome readers to offer their opinions to improve our policy.
