* add drafting credit

--- a/_i18n/en/_posts/2023-03-30-民主峰會-形塑新興科技以確保尊重人權與民主原則.md
+++ b/_i18n/en/_posts/2023-03-30-民主峰會-形塑新興科技以確保尊重人權與民主原則.md
@@ -3,7 +3,7 @@ layout: post
 title: "Summit for Democracy: Shaping emerging technologies to align with human rights and democratic principles"
 excerpt: "Empower the voices reaching across ideological divides and uncover our shared values in plain sight."
 image: /assets/imgs/20230330.jpg 
-author: "Audrey Tang"
+author: "Audrey Tang, Sheau-Tyng Peng"
 category: blog
 tags:
   - "Digital Resilience"
