--- a/_i18n/zh-TW/_posts/2023-03-30-民主峰會-形塑新興科技以確保尊重人權與民主原則.md
+++ b/_i18n/zh-TW/_posts/2023-03-30-民主峰會-形塑新興科技以確保尊重人權與民主原則.md
@@ -3,7 +3,7 @@ layout: post
 title: 民主峰會：形塑新興科技以確保尊重人權與民主原則
 excerpt: 彰顯跨越意識形態鴻溝的聲音，揭示一目瞭然的共同價值。
 image: /assets/imgs/20230330.jpg 
-author: 唐鳳
+author: 唐鳳、彭筱婷
 category: blog
 tags:
   - 數位韌性
