--- a/_i18n/en/_posts/2023-08-03-無法壓縮的演算法.md
+++ b/_i18n/en/_posts/2023-08-03-無法壓縮的演算法.md
@@ -3,7 +3,7 @@
   title: "The Case for Democratizing AI"
   excerpt: "If you want to create the common sense that comes from twenty years of being in the world, you need to devote twenty years to the task."
   image: "/assets/imgs/20230803.jpg"
-  author: "Audrey Tang, Sheau-Tyng Peng, Gisele Chou"
+  author: "Audrey Tang, Sheau-Tyng Peng, Mashbean Huang, Gisele Chou"
   category: "blog"
   tags: 
     - "Digital Strategy"
