--- a/_posts/2023-08-03-無法壓縮的演算法.md
+++ b/_posts/2023-08-03-無法壓縮的演算法.md
@@ -3,7 +3,7 @@ layout: post
 title: 無法壓縮的演算法
 excerpt: "想創造出在世上生活二十年得來的常識，就必須投入二十年的心力。"
 image: /assets/imgs/20230803.jpg
-author: 唐鳳、彭筱婷、周宜蔓
+author: 唐鳳、彭筱婷、黃彥霖、周宜蔓
 category: blog
 tags:
   - 數位策略
