--- a/_i18n/en/_posts/2023-05-02-資料治理有智-數據公益有理.md
+++ b/_i18n/en/_posts/2023-05-02-資料治理有智-數據公益有理.md
@@ -17,7 +17,7 @@ Today, with the popularization of audiovisual and language models, businesses ra
 
 However, just as petrochemical products have triggered climate crises and ecological disasters, leading to the pursuit of clean energy as a century-long challenge, foundation models are closely related to large datasets from training to application. If there is no foundation for proper governance, cyber-ecological disasters are imminent, with deepfake scams being just the tip of the iceberg.
 
-Fortunately, the international community is paying close attention to governance issues, expecting legal, ethical, and technological advancements to proceed hand in hand. At the G7 Digital and Technology Ministers' Meeting held in Japan in late April, a joint statement was issued, pledging to promote "human-centric" principles to maximize benefits for all and oppose misuse and abuse that undermines democracy, freedom, and human rights. The statement echoes the spirit of the "Declaration of the Summit for Democracy" and the "Declaration for the Future of Internet", pointing out that a "Data Free Flow with Trust (DFFT)" mechanism is the top priority for cross-border collaboration.
+Fortunately, the international community is paying close attention to governance issues, expecting legal, ethical, and technological advancements to proceed hand in hand. At the G7 Digital and Technology Ministers' Meeting held in Japan in late April, a joint statement was issued, pledging to promote "human-centered" principles to maximize benefits for all and oppose misuse and abuse that undermines democracy, freedom, and human rights. The statement echoes the spirit of the "Declaration of the Summit for Democracy" and the "Declaration for the Future of Internet", pointing out that a "Data Free Flow with Trust (DFFT)" mechanism is the top priority for cross-border collaboration.
 
 In other words, in the face of rapidly developing technologies such as foundation models, even if there are concerns about harms to human rights and democratic values, "free flow" remains the primary value of cross-border data governance, rather than building isolated strongholds or resorting to government regulation to reject data flow, turning advanced countries into "prohibition-first" countries.
 
