--- a/_i18n/en/_posts/2023-08-31-關鍵在於信任.md
+++ b/_i18n/en/_posts/2023-08-31-關鍵在於信任.md
@@ -1,31 +1,30 @@
 ---
   layout: "post"
-  title: "the key is trust"
-  excerpt: "The most secure mode of operation is to gather data holders and data users into an alliance."
+  title: "Trust is the key"
+  excerpt: "The most assuring mode of operation is to a coalition formed by data holders and data users."
   image: "/assets/imgs/key-2471007_1280.jpg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "多元創新"
+    - "Plural Innovation"
 ---
 
+Recently, Vitalik Buterin, co-founder of the renowned open-source project Ethereum, came to Taiwan to receive a Gold Card, granting him residency in our country. During our conversation at the "Plurality Taipei" event, participants raised a philosophical question: Who is qualified to "prove" everyone's identity in a decentralized cross-border community that cannot rely on the government?
 
-A while ago, Vitlaik Buterin, the co-founder of the well-known open source project "Ethereum", came to Taiwan to receive an employment gold card and obtain a residence status in our country. During our conversation at the "Multiverse in Taipei" event, participants raised a philosophical question: who is qualified to "prove" everyone's identity in a decentralized cross-border community that cannot rely on the government to confirm identity Woolen cloth? 
+Buterin believes that verification through interpersonal "social graphs" is more aligned to the spirit of Plurality. For example, being introduced into a community by friends you know is a kind of social graph. 
 
-Buterin believes that through the verification of the "social graph" of interpersonal relationships, it is a method that is closer to the identification of pluralistic spirits. For example, being introduced into a community by friends you know is a kind of social graph. 
+Another method is "biometrics": Verifying identity through fingerprints and iris recognition is also a widely used approach today.  Co-initiated by OpenAI founder Sam Altman and officially launched at the end of July, the cryptocurrency "Worldcoin" is a recent bold attempt to apply biometrics. 
 
-Another way is "biometric identification": verifying identity through personal fingerprint and iris recognition, which is also widely used today. Co-initiated by OpenAI founder Sam Altman and officially launched at the end of July, the cryptocurrency "World Coin" is a recent bold attempt to apply biometrics. 
+To obtain Worldcoin, you first must undergo authentication by scanning your iris with a sphere called "the Orb." The initial intent behind this mechanism is to prevent generative AI from impersonating humans. However, balancing the offline storage of sensitive data while achieving decentralized verification remains a significant challenge for Worldcoin.
 
-To obtain world coins, you must first scan your iris through a sphere called "the Orb" for identity verification. The original intention of this mechanism is to prevent generative AI from impersonating humans, but how to maintain offline storage of sensitive data and achieve decentralized verification at the same time is a major challenge for Worldcoin. 
+Buterin posits that, for Worldcoin's use of biometrics, even if they attempt to mitigate privacy risks through encryption, there still exists the risk of data breaches and malicious use.
 
-Buterin believes that even if Worldcoin uses biometrics to try to avoid privacy violations through encryption technology, the risk of personal data leakage and malicious use still exists. 
+Another way to identify a social graph is to verify a person's identity with a social circle, which requires the individual's consent. Buterin's reminder brings to mind the report "Data Coalitions and Escrow Agents" published by RadicalxChange Foundation in June.
 
-Another way to identify a social graph is to verify a person's identity with a social circle, but any use of personal information will involve the consent of the person concerned. Buterin's reminder reminds me of the report "Data Federation and Escrow Agents" released by the RadicalxChange Foundation in June this year. 
+The core concept of this report revolves around the "contextual boundaries" of personal data, meaning that the significance generated within a social graph often implicates many individuals' privacy. Thus, personal data should not be used outside its original purpose unless explicitly approved by the parties involved. Only by transforming it into non-personal data, with full protection of contextual boundary, can it circulate freely and be used safely.
 
-The core concept of this report is that the "context boundary" of personal data, that is, the meaning generated in a specific social graph, often involves the privacy of many people, so it should not be used directly outside the original purpose. Only with the informed consent of the parties concerned, it can be freely circulated and used with peace of mind if it is transformed into non-personal data and completely protects the boundaries of the context. 
+The report pointed out that the social value of data is far greater than the price of personal information as a commodity. Therefore, the most assuring mode of operation is to a coalition formed by data holders and data users, employing trusted third parties to ensure fairness and trustworthiness during data transformation. At this juncture, "privacy-enhancing technologies" serve as the crucial line of defense.
 
-The report pointed out that the social value of data is far greater than the price of personal information as a commodity. Therefore, the most secure mode of operation is to gather data holders and data users into an alliance, and then use a trusted third party to ensure fairness and credibility when converting personal data into data. At this time, the "privacy enhancement technology" that provides protection is the most important line of defense. 
+Building on the foundational demonstration of this year's "[Sports Data Altruism Service](https://www.data-sports.tw/)", the Ministry of Digital Affairs will subsequently release "Guidelines for Data Altruism Operations" and "Guidelines for Applications of Privacy-Enhancing Technologies," providing technical details and methods of application.  In my opinion, this not only has the opportunity to become a new cross-border digital authentication method, but also will open up an public good ecosystem of non-personal data.
 
-Continuing the demonstration basis of this year's "[Sports Data Public Welfare Platform](https://www.data-sports.tw/)", the Digital Department will then launch the "Guidelines for Data Public Welfare Operations" and "Guidelines for the Application of Privacy Enhanced Technologies" , providing application methods and technical details. In my opinion, this not only has the opportunity to become a new cross-border digital authentication method, but also will open up a public welfare ecology of data utilization. 
-
-Because, regardless of identity authentication or data usage, the key lies in "trust". Cross-border identities are meaningful and data can be of value only when there is mutual trust between people. 
+After all, whether it’s identity verification or data utilization, the key ultimately lies in "trust." It's only with mutual trust between individuals that cross-border identities become meaningful, and non-personal data can fully realize its value.
