* l10n; credit RR as the main drafter

--- a/_posts/2023-09-15-數位民主-AI-時代.md
+++ b/_posts/2023-09-15-數位民主-AI-時代.md
@@ -3,7 +3,7 @@ layout: post
 title: 數位民主，AI 時代
 excerpt: "對許多參與者來說，這是他們首次在審議的脈絡下與 AI 互動。"
 image: /assets/imgs/2023-09-11.jpg 
-author: 唐鳳
+author: 唐鳳、劉澄真
 category: blog
 tags:
   - 民主網絡
