* it is a hybrid event

--- a/_i18n/en/_posts/2023-09-15-數位民主-AI-時代.md
+++ b/_i18n/en/_posts/2023-09-15-數位民主-AI-時代.md
@@ -48,4 +48,4 @@ Thanks to zero-knowledge proofs, privacy-enhancing technologies and a GDPR-compl
 
 In closing, I invite all and sundry to participate in Polis conversations of scale, and employ pioneering initiatives in the realms of collective intelligence to rein in societal risks while safeguarding human rights and democracy for generations to come. By drawing on the collaboration, curiosity, courage and vision of the people, we can chart a deliberative and sustainable course for global governance and free the future — together.
 
-Blessings for your attention and time, and congratulations to SITRA for this exciting online event. Live long and … prosper!
+Blessings for your attention and time, and congratulations to SITRA for this exciting event. Live long and … prosper!
