* clarify only English name change

--- a/_i18n/en/_posts/2023-03-16-讓無人機與信任齊飛.md
+++ b/_i18n/en/_posts/2023-03-16-讓無人機與信任齊飛.md
@@ -13,7 +13,7 @@
 
 A while ago, my colleagues in the Telecommunications Technology Center (TTC) and I began to discuss the direction of transformation. TTC, under the supervision of the Department of Digital Technology, has made great contributions to the development of telecommunications in the past two decades, from code-carrying services, testing technology to policy think tanks. 
 
-In recent years, TTC has fully invested in the development of information security protection and achieved fruitful results. It also makes us think about expanding the "Telecom" in the English name to "Trustworthy Technology Center (Trustworthy Technology Center)". In line with its core business of helping to strengthen digital resilience. 
+In recent years, TTC has fully invested in the development of information security protection and achieved fruitful results. It also makes us think about expanding the "Telecom" in the English name to "Trusted Technology Center". In line with its core business of helping to strengthen digital resilience. 
 
 The "Drone Information Security Joint Test Laboratory" officially established on March 1st, assisted by the National Science Council and jointly built by TTC and industry partners, has set an important record for "Trust Tech" milestone. 
 
