--- a/_posts/2023-03-16-讓無人機與信任齊飛.md
+++ b/_posts/2023-03-16-讓無人機與信任齊飛.md
@@ -13,7 +13,7 @@ tags:
 
 前陣子，我和電信技術中心（TTC）的同仁們，開始探討轉型的方向。數位部督導的 TTC，近二十年來從攜碼服務、驗測技術到政策智庫，可說是無役不與，對通傳發展貢獻卓著。
 
-近年來，TTC 全力投入資安防護發展，獲得豐碩成果，也讓我們思考，將英文名稱中的「電信（Telecom）」，拓展為「信任科技中心（Trustworthy Technology Center）」，更符合它協助強化數位韌性的核心業務。
+近年來，TTC 全力投入資安防護發展，獲得豐碩成果，也讓我們思考，將英文名稱中的「Telecom」，拓展為「Trusted」，更符合它協助強化數位韌性的核心業務。
 
 而三月一日正式成立的「無人機資安聯合驗測實驗室」，由國科會協助、TTC 聯合國內業者夥伴共同打造，更為「信任科技（Trust Tech）」創下重要的里程碑。
 
