* add consultation hyperlinks

--- a/_i18n/zh-TW/_posts/2023-08-31-關鍵在於信任.md
+++ b/_i18n/zh-TW/_posts/2023-08-31-關鍵在於信任.md
@@ -25,6 +25,6 @@ tags:
 
 報告指出，數據的社會價值，遠大於個資作為商品的價格。因此，最有保障的運作方式，是將資料持有者和數據使用者聚集成聯盟，再透過受信任的第三方，確保個資轉化為數據時的公正可信。此時，提供保障的「隱私強化技術」，就是最重要的防線。
 
-延續今年「[運動數據公益平台](https://www.data-sports.tw/)」的示範基礎，數位部會接著推出《數據公益運作指引》和《隱私強化技術應用指引》，提供應用方式與技術細節。在我看來，這不僅有機會成為新的跨境數位認證方式，更將開拓出數據運用的公益生態。
+延續今年「[運動數據公益平台](https://www.data-sports.tw/)」的示範基礎，數位部會接著推出《[數據公益運作指引](https://join.gov.tw/policies/detail/ada473f2-7a4b-42ca-984b-740da54e6915)》和《[隱私強化技術應用指引](https://hackmd.io/@petworks/rJ-UOh9Rn)》，提供應用方式與技術細節。在我看來，這不僅有機會成為新的跨境數位認證方式，更將開拓出數據運用的公益生態。
 
 因為，不論身分認證或是數據運用，關鍵都在於「信任」。先有人與人的互信，跨境身分才有意義、數據才能發揮價值。
