--- a/_i18n/en/_posts/2023-08-31-關鍵在於信任.md
+++ b/_i18n/en/_posts/2023-08-31-關鍵在於信任.md
@@ -25,6 +25,6 @@ The core concept of this report revolves around the "contextual boundaries" of p
 
 The report pointed out that the social value of data is far greater than the price of personal information as a commodity. Therefore, the most assuring mode of operation is a coalition formed by data holders and data users, employing trusted third parties to ensure fairness and trustworthiness during data transformation. At this juncture, "privacy-enhancing technologies" serve as the crucial line of defense.
 
-Building on the foundational demonstration of this year's "[Sports Data Altruism Service](https://www.data-sports.tw/)", the Ministry of Digital Affairs will subsequently release "Guidelines for Data Altruism Operations" and "Guidelines for Applications of Privacy-Enhancing Technologies," providing technical details and methods of application. In my opinion, this not only has the opportunity to become a new cross-border digital authentication method, but also will open up an public good ecosystem of non-personal data.
+Building on the foundational demonstration of this year's "[Sports Data Altruism Service](https://www.data-sports.tw/)", the Ministry of Digital Affairs will subsequently release "[Guidelines for Data Altruism Operations](https://join.gov.tw/policies/detail/ada473f2-7a4b-42ca-984b-740da54e6915)" and "[Guidelines for Applications of Privacy-Enhancing Technologies](https://hackmd.io/@petworks/rJ-UOh9Rn)," providing technical details and methods of application. In my opinion, this not only has the opportunity to become a new cross-border digital authentication method, but also will open up an public good ecosystem of non-personal data.
 
 After all, whether it’s identity verification or data utilization, the key ultimately lies in "trust." It's only with mutual trust between individuals that cross-border identities become meaningful, and non-personal data can fully realize its value.
