--- a/_i18n/en/_posts/2023-09-15-數位民主-AI-時代.md
+++ b/_i18n/en/_posts/2023-09-15-數位民主-AI-時代.md
@@ -40,7 +40,7 @@ Furthermore, with the help of AI Objectives Institute, the [Talk to the City](ht
 
 Now, take a look at [this picture](https://talk.polis.tw/) — every dot represents an opinion and sparkles like a star in the darkness of the background. The holistic reflections form constellations, providing us directions on alignment. For many participants, this is the first time they interacted with AI in the context of deliberation. This occurred not as a solo conversation, but as an evolving group discussion for the collective good.
 
-In terms of AI governance, Taiwan believes that a democratic approach — not a technocratic one — is the optimal answer to what is an ethical and political conundrum of global proportions. The bottom line is experts simply cannot catch all use cases nor effects. Just as with climate change, comprehensive statistics are needed on potential harms, including over-reliance, emotional effects and information manipulation.
+In terms of AI governance, we believe that a democratic approach — not a technocratic one — is the optimal answer to what is an ethical and political conundrum of global proportions. The bottom line is experts simply cannot catch all use cases nor effects. Just as with climate change, comprehensive statistics are needed on potential harms, including over-reliance, emotional effects and information manipulation.
 
 Unlike climate change, interactions with AI are deeply personal. All indicators must be shared in a thoroughly privacy-preserving manner. It is felt the safest way to operate is to form coalitions of data holders and researchers, mediated through trusted data altruism organizations, to safeguard processing and aggregation of non-personal data on harms and preferences.
 
