--- a/_i18n/en/_posts/2023-09-15-數位民主-AI-時代.md
+++ b/_i18n/en/_posts/2023-09-15-數位民主-AI-時代.md
@@ -3,7 +3,7 @@
   title: "Digital Democracy in the Age of AI"
   excerpt: "For many participants, this was their first interaction with AI in a deliberative context."
   image: "/assets/imgs/2023-09-11.jpg"
-  author: "Audrey Tang, Rosalind Liu"
+  author: "Audrey Tang, Rosalind Liu, Wendy Hsueh"
   category: "blog"
   tags: 
     - "Democracy Network"
