--- a/_i18n/zh-TW/_posts/2023-09-28-穿越挑戰，以達星辰.md
+++ b/_i18n/zh-TW/_posts/2023-09-28-穿越挑戰，以達星辰.md
@@ -9,7 +9,7 @@ tags:
   - 數位產業
 ---
 
-前些日子，我和 Signal 基金會總裁惠特克（Meredith Whittaker）在公視英語影音平台 Taiwan Plus 的節目視訊對談，有很多深刻的體會。
+前些日子，我和 Signal 基金會總裁惠特克（Meredith Whittaker）在文化部英語影音平台 Taiwan Plus 的節目視訊對談，有很多深刻的體會。
 
 Signal 是一個開放源碼的通訊軟體 App，採用端到端加密技術。惠特克特別指出，該 App 不只無法側錄訊息，甚至每位使用者的「詮釋資料」，也就是可以間接辨識出個資的內容，也都徹底加密。換句話說，Signal 基金會無法取得任何個資，而如果任何人有疑慮，都可以一起確認、修正公開的程式碼。
 
