--- a/_i18n/en/_posts/2022-09-22-什麼是多元宇宙.md
+++ b/_i18n/en/_posts/2022-09-22-什麼是多元宇宙.md
@@ -1,33 +1,30 @@
 ---
   layout: "post"
-  title: "What is a multiverse?"
-  excerpt: "Everyone can freely choose different channels to connect with each other securely."
+  title: "What is Plurality?"
+  excerpt: "Everyone has the freedom to securely connect through diverse channels."
   image: "/assets/imgs/team-4200837_1280.jpg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "民主網絡"
+    - "Democracy Network"
 ---
 
+Lately, many are intrigued by the Ministry of Digital Affairs’ Plurality Section. Does it manage alternate societies from different timelines, much like the plotline of a sci-fi narrative?
 
-Recently, many friends are very curious about the "Multiverse Division" of the Digital Development Department. Is it like the plots that have appeared in science fiction works, where there are multiple completely different societies on different timelines? And is the multiverse science going to "govern" these different societies? 
+Such imagination is indeed creative. But, just as the moda is not a vehicle regulatory body, the Plurality Section is not a Time Variance Authority from the fictional world. Its purpose is to facilitate interoperability between different metaverses and pave the way for innovative applications.
 
-This is indeed quite creative thinking. However, just as the Digital Development Department does not conduct supervision business, the Multiverse Division is not the "Time Variation Administration" in the comics. The existence of this section is to allow the "metaverse" (metaverse) to communicate with each other and create new applications freely. 
+Today's known metaverses, extended through digital technologies like augmented reality and virtual reality, allow individuals to embody avatars in virtually constructed worlds. Yet, these virtual worlds are often confined to specific digital platforms, stifling innovation.
 
-The currently known Metaverse is extended through AR (augmented reality), VR (virtual reality) and other digital technologies, allowing people to appear as their own avatars in a world constructed in a virtual environment. However, the current virtual world can only interact within a specific digital platform, which virtually limits the possibility of innovation. 
+How can we overcome these barriers and achieve direct connectivity? In our daily lives, we are already implementing the principles of plurality. Take mobile phone numbers, for instance. They not only allow calls across carriers but also enable users to port their numbers to preferred service providers, amplifying choices without the hassle of re-establishing contacts.
 
-How to break the restriction and communicate directly? In fact, in our lives, the practice of multiverses has been practically applied everywhere. 
+Yet, most large-scale cross-border digital platforms do not offer this flexibility. Accounts are restricted to their native platforms. It is akin to a phone that only permits intra-network calls. To connect with someone on a different platform, one must create accounts everywhere, analogous to possessing multiple business cards with non-synchronized information.
 
-Mobile phone number is a good example. Not only can you call across telecommunication providers, but you can also "carry codes" at any time to transfer your original mobile phone number to the telecommunication provider you want to use. The advantage of this is that everyone has more choices. You don't need to re-register your phone number and rebuild all your contact information, and you can freely choose your preferred service. 
+Such constraints inadvertently stifle innovation. All accounts, being platform-dependent, can only share within that ecosystem. Moreover, platforms control all data interactions under each account, posing risks to privacy and data security.
 
-However, the current large-scale cross-border digital platforms are not like this, and accounts are limited to use within the platform. Just like a mobile phone, it only has the function of calling within the network, and cannot call the numbers of other telecom operators. If you want to connect with others through different platforms, you must create an account on each platform. It's like everyone has to print several business cards, and the information on each business card cannot be updated synchronously. 
+To communicate freely without platform interference, end-to-end encryption can be employed. Only the actual participating endpoints can view each other's messages, ensuring interactions are not intercepted nor logged. This embodies the core concept of Plurality: Everyone has the freedom to securely connect through diverse channels.
 
-Such restrictions virtually stifle the possibility of innovation. Because all accounts must be approved by the platform, they can only be shared on a single platform. Moreover, the platform side controls all interactive data under each account, which poses risks to privacy and information security. 
+So, what can the Plurality Section achieve? Precedents exist. Years ago, real-time online messaging enabled cross-platform communication. Email was among the earliest applications allowing free communication across different domains.
 
-If you want to freely connect and interact with other people without being influenced by the middle platform, you can use the "end-to-end encryption" method. That is, only the endpoints actually participating can see each other's messages, and the interaction will not be intercepted and recorded. This is the core concept of the "multiverse": everyone can freely choose different channels to connect to each other securely. 
+Using the right tools to communicate and share, building consensus, and propagating innovation — this vision resonates with the Declaration for the Future of the Internet, and truly embodies Taiwan's pursuit of Plurality.
 
-What can multiverse science do? In fact, there are precedents to follow. More than ten years ago, instant messages in the Internet world could communicate with each other across platforms. E-mail is one of the earliest interoperable applications, and everyone can freely send to mailboxes in other domains. 
-
-Use appropriate tools to communicate with each other, and then build consensus and spread innovation. This is the vision of the "Future Internet Manifesto", which is the "multiverse" that Taiwan is developing. 
-
-Through a point-to-point, multi-center, and decentralized architecture, the Digital Development Department will continue to use the concept of interoperability to promote innovative applications that reflect local needs, creating an infinite future for Taiwan and the world. 
+By investing in peer-to-peer, polycentered and decentralized architectures that  reflect local needs in innovative applications, the moda is striving to free the future and deliver resilience for all.
